<resources>
    <string name="app_name">Pra Asessment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nim">NIM : 6706181081</string>
    <string name="nama">Nama : Wesly Siallagan</string>
    <string name="kelas">Kelas : D3RPLA-42-04</string>
    <string name="btn_title_ppanjang">Persegi Panjang</string>
    <string name="btn_title_segitiga">Segitiga</string>
    <string name="tv_title_about">About</string>
    <string name="hint_panjang">Panjang</string>
    <string name="hint_lebar">Lebar</string>
    <string name="btn_hitung">Hitung</string>
    <string name="tv_luas_panjang">Luas =</string>
    <string name="tv_keliling_panjang">Keliling =</string>
    <string name="btn_share">Share</string>
    <string name="tv_luas_segitiga">Luas =</string>
    <string name="tv_keliling_segitiga">Keliling =</string>
    <string name="et_alas">Alas</string>
    <string name="et_tinggi">Tinggi</string>
</resources>
