<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".AboutFragment">

            <TextView
                    android:id="@+id/tv_nim"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:text="@string/nim"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintVertical_bias="0.196"/>

            <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:text="@string/nama"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintVertical_bias="0.046" app:layout_constraintTop_toBottomOf="@+id/tv_nim"/>

            <TextView
                    android:id="@+id/tv_kelas"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:textSize="20sp"
                    android:text="@string/kelas"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintVertical_bias="0.047" app:layout_constraintTop_toBottomOf="@+id/tv_nama"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>