<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable name="luas2" type="Double"/>
        <variable name="keliling2" type="Double"/>

    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".SegitigaFragment">

            <EditText
                    android:id="@+id/et_alas"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/et_alas"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.336" app:layout_constraintVertical_bias="0.069"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:id="@+id/et_tinggi"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/et_tinggi"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.336" app:layout_constraintVertical_bias="0.019"
                    app:layout_constraintTop_toBottomOf="@+id/et_alas"/>
            <Button
                    android:id="@+id/btn_hitung_segitiga"
                    android:text="@string/btn_hitung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_tinggi" app:layout_constraintHorizontal_bias="0.104"
                    app:layout_constraintVertical_bias="0.05"/>

            <TextView
                    android:text="@string/tv_luas_segitiga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_luas_segitiga"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_hitung_segitiga"
                    app:layout_constraintHorizontal_bias="0.098"
                    app:layout_constraintVertical_bias="0.041"
                    android:textSize="30sp"
            />

            <TextView
                    android:text="@{luas2.toString()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_hasil_luas_segitiga"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_hitung_segitiga"
                    app:layout_constraintHorizontal_bias="0.412"
                    app:layout_constraintVertical_bias="0.04"
                    android:textSize="30sp"
            />

            <TextView
                    android:text="@string/tv_keliling_segitiga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_keliling_segitiga"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_luas_segitiga"
                    app:layout_constraintHorizontal_bias="0.094"
                    app:layout_constraintVertical_bias="0.153"
                    android:textSize="30sp"
            />

            <TextView
                    android:text="@{keliling2.toString()}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_hasil_keliling_segitiga"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_hitung_segitiga"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintVertical_bias="0.308"
                    android:textSize="30sp"
            />
            <Button
                    android:id="@+id/btn_share_segitiga"
                    android:text="@string/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_keliling_segitiga"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.084"
                    app:layout_constraintVertical_bias="0.077"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</layout>